--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.5"
   },
